# voxel-viewer

./: .gitignore  README.md  colors.json  pyproject.toml  requirements.txt  start.sh
src/voxel_viewer/: __init__.py  __main__.py  binvox.py  colors.py  converter.py  gui.py
tests/: conftest.py  test_binvox.py  test_colors.py  test_converter.py
tests/fixtures/: sample.csv  sample_legacy.csv
